# lakehouse-elt

./: .gitignore  README.md  pyproject.toml
lakehouse_elt/: main.py
lakehouse_elt/config/: BucketConnection.py  LakehouseConnection.py  conn.py
lakehouse_elt/lakehouse_project/: dbt_project.yml
lakehouse_elt/lakehouse_project/models/gold/: gold_comparative_analysis.sql  gold_memory_distribution.sql  gold_price_analysis.sql  gold_price_segments.sql  gold_price_trend.sql  gold_rating_analysis.sql  gold_top_10_cheapest_smartphones.sql  gold_top_10_expensive_smartphones.sql  schema.yml
lakehouse_elt/lakehouse_project/models/silver/: schema.yml  silver_smartphone.sql
lakehouse_elt/scraping/: items.py  pipelines.py  settings.py
lakehouse_elt/scraping/spiders/: amazon_spider.py
lakehouse_elt/staging_to_bronze/: main.py
lakehouse_elt/web_scraping/web_scraping/: settings.py
